--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://avatars.githubusercontent.com/u/129137886?v=4" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Swayam Sahoo</title>
+    <title>Swayam Sahoo - AI/ML Engineer | Portfolio</title>
   </head>
   <body class="bg-gray-900">
     <div id="root"></div>
